		Students: added student ID to search
		Students: added student image to privacy report
		Students: added setting to allow student note creation notification to be sent to all teachers
		Timetable: more graceful fail when getting Google Calendar and refreshToken is not present
		Timetable: PHP Notice fix on heigh constant
		Timetable: fixed typo in class edit view
		Timetable Admin: removed Left users from exception add screen
		Timetable Admin: narrowed down class participant count in Course edit view to users with status Full
		Timetable Admin: added search and filters to course enrolment and course management pages
		Timetable Admin: added bulk action to copy selected students to another class
		Timetable Admin: code clean up on bulk actions when managing course enrolment by class
		Timetable Admin: removed required field notice on location field when editing a class in a timetable
		User Admin: fixed PHP Notice issue in user import
		User Admin: tweaked link to family from Manage Users to fix year group no-show issue
		User Admin: fixed PHP Notice issue in student enrolment import
		User Admin: fixed mime-type issue in user image import function
		User Admin: added student ID to search in Manage Users
		User Admin: added birth certificate scan field in Manage Users

	Deprecated
		Planner: replaced original planner-based attendance with attendance by class

v12.0.00
--------
	Headlines
		New markbook configuration to allow weighting and total score calculation for all suitable columns in class
		New interface for defining interface string substitutions, along for custom language tweaks
		PHP 7 compatible
		Dashboards, with hooks, for staff and students
		New workflows for advertising job openings, accepting and processing applications
		Complete Dutch translation ("dank je" to Vic Mortelmans and Kris Clauw)

	Changes With Important Notices
		System: initial phase of object oriented PHP rewrite: expect errors during upload of the update.