@@ -134,6 +134,7 @@ v13.0.00
 		Timetable: more graceful fail when getting Google Calendar and refreshToken is not present
 		Timetable: PHP Notice fix on heigh constant
 		Timetable: fixed typo in class edit view
+		Timetable: fixed bug preventing Master Timetable from showing classes with on location
 		Timetable Admin: removed Left users from exception add screen
 		Timetable Admin: narrowed down class participant count in Course edit view to users with status Full
 		Timetable Admin: added search and filters to course enrolment and course management pages
